--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --open --port 3000 --contentBase views --hot"
+    "dev": "webpack-dev-server --open --port 3000 --contentBase views --hot "
   },
   "keywords": [],
   "author": "",
@@ -36,6 +36,7 @@
     "mint-ui": "^2.2.13",
     "moment": "^2.24.0",
     "vue": "^2.6.10",
+    "vue-preview": "^1.1.3",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.7"
   }
